force-app/main/default/objects/FundingAwardUpdate__c/FundingAwardUpdate__c.object-meta.xml
<CustomObject>
    <description>Custom object to allow storage of the regular monthly reporting against funding awards</description>
    <label>Funding Award Update</label>
    <nameField>
        <displayFormat>PUP-{00000}</displayFormat>
        <label>Funding Project Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>