force-app/main/default/objects/FundingAwardUpdate__c/fields/Baseline_Version__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Version__c</fullName>
    <formula>Funding_Baseline__r.Baseline_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Version</label>
    <type>Text</type>
</CustomField>