force-app/main/default/objects/FundingAwardUpdate__c/fields/Child_Actual__c.field-meta.xml
<CustomField>
    <fullName>Child_Actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Actual</label>
    <referenceTo>FundingAwardActual__c</referenceTo>
    <relationshipLabel>Funding Award Updates</relationshipLabel>
    <relationshipName>Funding_Award_Updates_del</relationshipName>
    <type>Lookup</type>
</CustomField>