force-app/main/default/objects/FundingAwardUpdate__c/fields/Child_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Child_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Forecast</label>
    <referenceTo>FundingAwardForecast__c</referenceTo>
    <relationshipLabel>Funding Award Updates</relationshipLabel>
    <relationshipName>Funding_Award_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>