force-app/main/default/objects/FundingAwardUpdate__c/fields/Funding_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Funding_Baseline__c</fullName>
    <description>Master Detail Lookup to current Funding Basline</description>
    <label>Funding Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Award Updates</relationshipLabel>
    <relationshipName>Funding_Project_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>