force-app/main/default/objects/FundingAwardUpdate__c/fields/Grant_A_A_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_A_A_Spend__c</fullName>
    <label>Grant A&amp;A Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>