force-app/main/default/objects/FundingAwardUpdate__c/fields/Homes_Approached__c.field-meta.xml
<CustomField>
    <fullName>Homes_Approached__c</fullName>
    <label>Homes Approached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>