force-app/main/default/objects/FundingAwardUpdate__c/fields/Lessons_Learned_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned_Other_Information__c</fullName>
    <label>Lessons Learned/Other Information (optio</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>