force-app/main/default/objects/FundingAwardUpdate__c/fields/Nil_Return_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Nil_Return_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Declaration to confirm that there are no cases of fraud or error to report this month</description>
    <inlineHelpText>Declaration to confirm that there are no cases of fraud or error to report this month</inlineHelpText>
    <label>Nil Return Declaration</label>
    <type>Checkbox</type>
</CustomField>