force-app/main/default/objects/FundingAwardUpdate__c/fields/Nil_Risk_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Nil_Risk_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Declaration to confirm that there are no risk or issues to report this month</inlineHelpText>
    <label>Nil Risk Declaration</label>
    <type>Checkbox</type>
</CustomField>