force-app/main/default/objects/FundingAwardUpdate__c/fields/Plan_for_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Plan_for_Next_Month__c</fullName>
    <label>Plan for Next Month</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>