force-app/main/default/objects/FundingAwardUpdate__c/fields/Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update__c</fullName>
    <label>Progress Update</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>