force-app/main/default/objects/FundingAwardUpdate__c/fields/Project_RAG__c.field-meta.xml
<CustomField>
    <fullName>Project_RAG__c</fullName>
    <label>Project RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>