force-app/main/default/objects/FundingAwardUpdate__c/fields/RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>RAG_Status__c</fullName>
    <formula>CASE(
    TEXT(Update_RAG__c),
    &quot;Green&quot;, IMAGE(&quot;/resource/ragstatus/2green.png&quot;, &quot;RAG Rating - Green&quot;, 26,26),
    &quot;Amber&quot;, IMAGE(&quot;/resource/ragstatus/3amber.png&quot;, &quot;RAG Rating - Amber&quot;, 26,26),
    &quot;Red&quot;, IMAGE(&quot;/resource/ragstatus/4red.png&quot;, &quot;RAG Rating - Red&quot;, 26,26),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Status</label>
    <type>Text</type>
</CustomField>