force-app/main/default/objects/FundingAwardUpdate__c/fields/Reason_for_homes_approached_not_receivin__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_homes_approached_not_receivin__c</fullName>
    <description>Reason for homes approached not receiving installations</description>
    <inlineHelpText>Reason for homes approached not receiving installations</inlineHelpText>
    <label>Reasons not receiving installations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost of measures too high</fullName>
            </value>
            <value>
                <fullName>Resident refusal</fullName>
            </value>
            <value>
                <fullName>Can no longer access the property</fullName>
            </value>
            <value>
                <fullName>Property is already at an EPC C</fullName>
            </value>
            <value>
                <fullName>Property already has proposed measures installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>