force-app/main/default/objects/FundingAwardUpdate__c/fields/Reason_for_Nil_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Nil_Return__c</fullName>
    <description>Reason why no fraud and error cases were reported this month</description>
    <inlineHelpText>Reason why no fraud and error cases were reported this month</inlineHelpText>
    <label>Reason for Nil Return</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>