force-app/main/default/objects/FundingAwardUpdate__c/fields/Reason_for_Nil_Risks__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Nil_Risks__c</fullName>
    <inlineHelpText>Reason why no risks or issues cases were reported this month</inlineHelpText>
    <label>Reason for Nil Risks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>