force-app/main/default/objects/FundingAwardUpdate__c/fields/Reporting_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End__c</fullName>
    <description>End date of reporting period</description>
    <inlineHelpText>This should normally be the last day of the month</inlineHelpText>
    <label>Reporting Period End</label>
    <type>Date</type>
</CustomField>