force-app/main/default/objects/FundingAwardUpdate__c/fields/Reporting_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Start__c</fullName>
    <description>Start date of reporting period</description>
    <inlineHelpText>This should normally be the first of the month</inlineHelpText>
    <label>Reporting Period Start</label>
    <type>Date</type>
</CustomField>