force-app/main/default/objects/FundingAwardUpdate__c/fields/Resubmission_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Request_Details__c</fullName>
    <label>Resubmission Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>