force-app/main/default/objects/FundingAwardUpdate__c/fields/Total_No_of_KPI_1__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_KPI_1__c</fullName>
    <description>Full field name: Total No. of Homes Identified As Suitable For Retrofit.</description>
    <inlineHelpText>Total No Of Homes Identified As Suitable For Retrofit</inlineHelpText>
    <label>Total No. of KPI 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>