force-app/main/default/objects/FundingAwardUpdate__c/fields/Total_No_of_KPI_2__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_KPI_2__c</fullName>
    <description>Full field name: Total No. of Homes Ready For Installs To Start</description>
    <inlineHelpText>Total No Of Homes Ready For Installs To Start</inlineHelpText>
    <label>Total No. of KPI 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>