force-app/main/default/objects/FundingAwardUpdate__c/fields/Update_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Deadline_Date__c</fullName>
    <label>Update Deadline Date</label>
    <type>Date</type>
</CustomField>