force-app/main/default/objects/FundingAwardUpdate__c/fields/updatedAfterNextReportingDate__c.field-meta.xml
<CustomField>
    <fullName>updatedAfterNextReportingDate__c</fullName>
    <description>Used to check whether an updated record is updated after the next reporting date. This will allow reports to show data based on when a record was updated after late submission.</description>
    <formula>Date_of_Update__c &gt; Update_Deadline_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>updatedAfterNextReportingDate</label>
    <type>Checkbox</type>
</CustomField>