force-app/main/default/objects/FundingAwardUpdate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Status__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Funding_Baseline__c</columns>
    <columns>Update_RAG__c</columns>
    <columns>Month__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_Reporting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>