force-app/main/default/objects/FundingAwardUpdate__c/listViews/All_SHF_Strategic_Partner_Award_Updates.listView-meta.xml
<ListView>
    <fullName>All_SHF_Strategic_Partner_Award_Updates</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Status__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Funding_Baseline__c</columns>
    <columns>Update_RAG__c</columns>
    <columns>Month__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_Reporting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Award_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>SHF Strategic Partner</value>
    </filters>
    <label>All SHF Strategic Partner Award Updates</label>
</ListView>