force-app/main/default/objects/FundingAwardUpdate__c/listViews/GR_Late_Submissions.listView-meta.xml
<ListView>
    <fullName>GR_Late_Submissions</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Update_RAG__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>updatedAfterNextReportingDate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Reporting_Period_Start__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>GR Late Submissions</label>
</ListView>