force-app/main/default/objects/FundingAwardUpdate__c/listViews/GR_Project_Update.listView-meta.xml
<ListView>
    <fullName>GR_Project_Update</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>Funding_Baseline__c</columns>
    <columns>Update_RAG__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>GR Project Update</label>
</ListView>