force-app/main/default/objects/FundingAwardUpdate__c/listViews/GR_Reports_Submitted.listView-meta.xml
<ListView>
    <fullName>GR_Reports_Submitted</fullName>
    <columns>Funding_Award__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Reporting_Period_Start__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>GR Reports Submitted</label>
</ListView>