force-app/main/default/objects/FundingAwardUpdate__c/listViews/GR_Update_Resubmission_Requested.listView-meta.xml
<ListView>
    <fullName>GR_Update_Resubmission_Requested</fullName>
    <columns>Funding_Award__c</columns>
    <columns>Date_of_Update__c</columns>
    <columns>RAG_Status__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Reporting_Period_Start__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Resubmission Requested</value>
    </filters>
    <label>GR Update Resubmission Requested</label>
</ListView>